--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     //RECORD
     <string name="title_activity_record">RecordActivity</string>
     <string name="record_fileChooser">FileChooser</string>
+    <string name="record_textView_file">Nombre: </string>
+    <string name="record_fileName">record_file</string>
 
     //VIDEO
     <string name="title_activity_video">VideoActivity</string>
